# jobscout

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: jobscout.yaml  openclaw.jobscout.json
docs/: ARCHITECTURE.md  CONFIGURATION.md  FAQ.md  INSTALL.md  SCHEDULING.md  SOURCES.md  TROUBLESHOOTING.md
scripts/: healthcheck.sh  install.sh  run_scan.sh  send_daily_email.sh  send_daily_report.sh  send_weekly_report.sh  setup_cron.sh  uninstall_cron.sh
src/jobscout/: __init__.py  ai.py  cli.py  config.py  models.py  report.py  scoring.py  storage.py
src/jobscout/notify/: email.py  telegram.py
src/jobscout/sources/: __init__.py  base.py  burza_hzz.py  facebook_groups.py  linkedin.py  mojposao.py  posao_hr.py
tests/: test_core.py
workspace/: AGENTS.md  SOUL.md
workspace/skills/jobscout/: SKILL.md
